Correct right-aligned class

--- a/src/components/accordion.scss
+++ b/src/components/accordion.scss
@@ -60,7 +60,7 @@
   }
 
   &.custom-right {
-    margin-left: auto;
+    margin-right: 0;
   }
 
   &.custom-full-w {
